<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <TextView
       android:id="@+id/textView1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/margin"
       android:text="@string/url"
       android:textSize="20sp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_marginStart="20dp"
       />

   <EditText
       android:id="@+id/editText1"
       android:layout_width="185dp"
       android:layout_height="0dp"
       android:autofillHints="Url"
       android:hint="@string/url"
       android:inputType="textUri"
       app:layout_constraintBaseline_toBaselineOf="@+id/textView1"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent" />

   <Button
       android:id="@+id/btn1"
       android:layout_width="100dp"
       android:layout_height="0dp"
       android:text="@string/btn_browse"
       app:layout_constraintBaseline_toBaselineOf="@id/textView1"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginEnd="10dp"
       />

   <TextView
       android:id="@+id/textView2"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/margin"
       android:text="@string/phone"
       android:textSize="20sp"
       app:layout_constraintTop_toBottomOf="@id/textView1"
       android:layout_marginStart="20dp"
       android:layout_marginEnd="290dp"
       />

   <EditText
       android:id="@+id/editText2"
       android:layout_width="185dp"
       android:layout_height="0dp"
       android:autofillHints="Url"
       android:hint="@string/phone"
       android:inputType="number"
       android:maxLength="10"
       app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent" />

   <Button
       android:id="@+id/btn2"
       android:layout_width="100dp"
       android:layout_height="0dp"
       android:text="@string/btn_call"
       app:layout_constraintBaseline_toBaselineOf="@id/textView2"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginEnd="10dp"
       />

   <TextView
       android:id="@+id/textView3"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/margin"
       android:text="@string/call"
       android:textSize="20sp"
       app:layout_constraintTop_toBottomOf="@id/textView2"
       android:layout_marginStart="25dp"
       android:layout_marginEnd="300dp"
       />

   <Button
       android:id="@+id/btn3"
       android:layout_width="100dp"
       android:layout_height="0dp"
       android:text="@string/btn_call_log"
       app:layout_constraintBaseline_toBaselineOf="@id/textView3"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginEnd="10dp"
       />

   <TextView
       android:id="@+id/textView4"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/margin"
       android:text="@string/gallery"
       android:textSize="20sp"
       app:layout_constraintTop_toBottomOf="@id/textView3"
       android:layout_marginStart="25dp"
       android:layout_marginEnd="300dp"
       />

   <Button
       android:id="@+id/btn4"
       android:layout_width="100dp"
       android:layout_height="0dp"
       android:text="@string/btn_gallery"
       app:layout_constraintBaseline_toBaselineOf="@id/textView4"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginEnd="10dp"
       />

   <TextView
       android:id="@+id/textView5"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/margin"
       android:text="@string/cam"
       android:textSize="20sp"
       app:layout_constraintTop_toBottomOf="@id/textView4"
       android:layout_marginStart="25dp"
       android:layout_marginEnd="300dp"
       />

   <Button
       android:id="@+id/btn5"
       android:layout_width="100dp"
       android:layout_height="0dp"
       android:text="@string/btn_camera"
       app:layout_constraintBaseline_toBaselineOf="@id/textView5"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginEnd="10dp"
       />

   <TextView
       android:id="@+id/textView6"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/margin"
       android:text="@string/alarm"
       android:textSize="20sp"
       app:layout_constraintTop_toBottomOf="@id/textView5"
       android:layout_marginStart="25dp"
       android:layout_marginEnd="300dp"
       />

   <Button
       android:id="@+id/btn6"
       android:layout_width="100dp"
       android:layout_height="0dp"
       android:text="@string/btn_alarm"
       app:layout_constraintBaseline_toBaselineOf="@id/textView6"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginEnd="10dp"
       />

   <TextView
       android:id="@+id/textView7"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/margin"
       android:text="@string/login"
       android:textSize="20sp"
       app:layout_constraintTop_toBottomOf="@id/textView6"
       android:layout_marginStart="25dp"
       android:layout_marginEnd="300dp"
       />

   <Button
       android:id="@+id/btn7"
       android:layout_width="100dp"
       android:layout_height="0dp"
       android:text="@string/btn_login"
       app:layout_constraintBaseline_toBaselineOf="@id/textView7"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginEnd="10dp"
       />


   <TextView
       android:id="@+id/textView8"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/margin"
       android:text="@string/btn_play"
       android:textSize="20sp"
       app:layout_constraintTop_toBottomOf="@id/textView7"
       android:layout_marginStart="25dp"
       android:layout_marginEnd="300dp"
       />

   <Button
       android:id="@+id/btn8"
       android:layout_width="100dp"
       android:layout_height="0dp"
       android:text="@string/btn_play"
       app:layout_constraintBaseline_toBaselineOf="@id/textView8"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginEnd="10dp"
       />

   <TextView
    android:id="@+id/textView9"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:text="@string/btn_stop"
    android:textSize="20sp"
    app:layout_constraintTop_toBottomOf="@id/textView8"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="300dp"
    />

   <Button
       android:id="@+id/btn9"
       android:layout_width="100dp"
       android:layout_height="0dp"
       android:text="@string/btn_stop"
       app:layout_constraintBaseline_toBaselineOf="@id/textView9"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginEnd="10dp"
       />

   <Button
       android:id="@+id/btn10"
       android:layout_width="100dp"
       android:layout_height="0dp"
       android:text="@string/check"
       app:layout_constraintTop_toBottomOf="@id/btn9"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginEnd="10dp"
       />
</androidx.constraintlayout.widget.ConstraintLayout>