<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MediaPlayer">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="35sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold|italic"
        android:textColor="#4617E6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


<com.google.android.material.card.MaterialCardView
    android:id="@+id/cardview1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="25dp"
    app:cardElevation="25dp"
    android:layout_marginTop="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:layout_constraintTop_toBottomOf="@id/title"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        app:srcCompat="@drawable/rrr"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/img_rrr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        app:cardElevation="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/cardview1"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            >

            <TextView
                android:id="@+id/music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_title"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />


            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/music"
                />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/shuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shuffle"
            app:fabSize="mini"
            app:tint="@color/white"
            android:elevation="12dp"
            android:backgroundTint="#2C2826"
            android:contentDescription="@string/music_title"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/skip_previous"
                app:fabSize="mini"
                app:tint="@color/white"
                android:elevation="12dp"
                android:layout_marginStart="10dp"
                android:backgroundTint="#2C2826"
                android:contentDescription="@string/music_title"
                app:layout_constraintStart_toEndOf="@id/shuffle"
                app:layout_constraintTop_toBottomOf="@id/view"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/play_arrow"
                app:fabSize="mini"
                android:backgroundTint="#F00707"
                app:tint="@color/white"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/music_title"
                android:elevation="12dp"
                app:layout_constraintTop_toBottomOf="@id/view"
                app:layout_constraintStart_toEndOf="@id/previous"/>


       <com.google.android.material.floatingactionbutton.FloatingActionButton
           android:id="@+id/next"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/skip_next"
           app:fabSize="mini"
           app:tint="@color/white"
           android:elevation="12dp"
           android:layout_marginStart="10dp"
           android:backgroundTint="#2C2826"
           android:contentDescription="@string/music_title"
           app:layout_constraintTop_toBottomOf="@id/view"
           app:layout_constraintStart_toEndOf="@id/play"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/stop"
        android:backgroundTint="#2C2826"
        app:fabSize="mini"
        app:tint="@color/white"
        android:elevation="12dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/music_title"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toEndOf="@id/next"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>